testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=636) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L1273(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=637) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#371 = spawn use_ref(r): type#371: type#371
  await(task): nothing
  return
}

borrow edges:
  L1275(r) (&) borrows L1274(x) at 0:87-89 scope=S5
events:
  borrow_start L1275(r) -> L1274(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L1275(r) -> L1274(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L1275(r) -> L1274(x) scope=S5 note="scope_end B1"
move plan:
  L1274(x): MoveCopy (copy type)
  L1275(r): MoveForbidden (spawn escape)
  L1276(task): MoveNeedsDrop (non-copy (drop))

